--- a/Exercícios - HTML+CSS/Exercícios-flex-box/01 - Profile-card/style.css
+++ b/Exercícios - HTML+CSS/Exercícios-flex-box/01 - Profile-card/style.css
@@ -38,10 +38,9 @@ body{
 }
 
 .main img {
-    max-width: 100px;
+    width: 100px;
     height: 100px;
-    border-radius: 100%;
-    border: 3px solid black;
+    border-radius: 50%;
 }
 
 .info-container {
