--- a/Exercícios - HTML+CSS/Exercícios-flex-box/02 - Aplicativo de conselhos aleatórios/style.css
+++ b/Exercícios - HTML+CSS/Exercícios-flex-box/02 - Aplicativo de conselhos aleatórios/style.css
@@ -11,6 +11,7 @@ body {
     align-items: center;
     width: 100%;
     height: 100vh;
+    flex-direction: column;
     
 
 } 
@@ -25,7 +26,6 @@ body {
     padding-top: 15px;
     padding-left:25px;
     padding-right: 25px;
-    justify-content: space-between;
     border-radius: 20px;
 }
 
@@ -37,7 +37,7 @@ body {
     text-align: center; 
     /* border-bottom:3px solid hsl(216, 18%, 22%);  */ 
     font-size: 28px;
-    padding-bottom: 20px; 
+    padding-bottom: 50px; 
     padding-left: 20px;
     padding-right: 20px;
     
@@ -60,8 +60,14 @@ body {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    margin-top: 20px;
+    margin-top: -20px;
 } 
+
+.button-generator:hover {
+    box-shadow: 0px 0px 40px -5px hsl(150, 100%, 66%) ;
+    transform: scale(1.05);
+    transition: 0.5s;    
+}
 
 a{
     color: hsl(217, 19%, 24%);
