alterações de rotina

--- a/Módulo - CSS/CSS/CSS intermediário/08 - Estilizando backgrounds/style.css
+++ b/Módulo - CSS/CSS/CSS intermediário/08 - Estilizando backgrounds/style.css
@@ -6,7 +6,7 @@ p {
 
 .bg {
     background-color: lightgreen;
-    background-image: url(./src/cat.png);
+    background-image: url(src/cat.png);
 }
 
 
