--- a/Exercícios - HTML+CSS/Exercícios-flex-box/Gerador-conselho-PIA/src/CSS/style.css
+++ b/Exercícios - HTML+CSS/Exercícios-flex-box/Gerador-conselho-PIA/src/CSS/style.css
@@ -52,7 +52,8 @@ main{
     background-color:  hsl(145, 100%, 65%);
     opacity: 1;
     transition: 1s ease;
-    box-shadow: 0px 0px 40px -5px hsl(150, 100%, 66%) ;     transform: scale(1.05);
+    box-shadow: 0px 0px 40px -5px hsl(150, 100%, 66%) ;     
+    transform: scale(1.05);
     transition: 0.5s;
 }
 
