--- a/Exercícios - HTML+CSS/Exercícios-flex-box/Gerador-conselho-PIA/src/CSS/style.css
+++ b/Exercícios - HTML+CSS/Exercícios-flex-box/Gerador-conselho-PIA/src/CSS/style.css
@@ -63,3 +63,20 @@ main{
     width: 15px;
     height: 15px;
 }
+
+
+@media (max-width:425px){
+
+    main{
+        height: 100vh;
+        width: 100%;
+    }
+    .main-container{
+        max-width: 60%;
+
+    } 
+
+    .divider{
+        max-width: 100%;
+    }
+}
